Refactor: Allow harnesses Codex + Claude code
